# dag-factory

./: .codecov.yml  .coveragerc  .gitignore  .pre-commit-config.yaml  .travis.yml  AGENTS.md  CHANGELOG.md  CHANGELOG_PELETON.md  CODEOWNERS  Dockerfile  MANIFEST.in  Makefile  PRIVACY_NOTICE.md  Pipfile  README.md  SECURITY.md  dags  index.html  latest  logme.ini  main.py  mkdocs.yml  pyproject.toml  requirements.txt  ruff.toml  setup.py  test-requirements.txt  test1_dag.yaml  test2_dag.yaml  tox.ini  versions.json
.github/: FUNDING.yml  codecov.yml  dependabot.yml  zizmor.yml
.github/ISSUE_TEMPLATE/: 01-bug.yml  02-feature.yml
.github/workflows/: cicd.yaml  codeql.yml  docs.yaml  lint.yaml  main.yml  publish-package-prod.yml  publish-package-staging.yml  publish-package.yml  release.yml  review-bot-prs.lock.yml  review-bot-prs.md  test.yml  zizmor.yml
0.22.0/: 404.html  index.html  sitemap.xml
0.22.0/comparison/: index.html
0.22.0/search/: search_index.json
0.22.0a1/: 404.html  index.html  sitemap.xml
0.22.0a1/comparison/: index.html
0.22.0a2/: 404.html  index.html  sitemap.xml
0.22.0a2/comparison/: index.html
0.23.0/: 404.html  index.html  sitemap.xml
0.23.0/comparison/: index.html
1.0.0/: 404.html  index.html  sitemap.xml
1.0.0/comparison/: index.html
1.0.0/migration_guide/: index.html
1.0.1/: 404.html  index.html  sitemap.xml
1.0.1/comparison/: index.html
1.0.1/migration_guide/: index.html
1.1.0/: 404.html  index.html  sitemap.xml
1.1.0/comparison/: index.html
1.1.0/migration_guide/: index.html
airflow/dags/: main.py
dagfactory/: __init__.py  __main__.py  __version__.py  _yaml.py  constants.py  dagbuilder.py  dagfactory.py  exceptions.py  generate_dag_code.py  loader.py  parsers.py  settings.py  single_dag.py  telemetry.py  utils.py  validator.py
dagfactory/listeners/: runtime_event.py
dagfactory/plugin/: __init__.py
dagfactory/schemas/: __init__.py  dag_parameters.json
dev/: .dockerignore  .gitignore  404.html  Dockerfile  README.md  index.html  requirements.txt  simple_auth_manager_passwords.json.generated  sitemap.xml
dev/.astro/: config.yaml  dag_integrity_exceptions.txt  test_dag_integrity_default.py
dev/comparison/: index.html
dev/dags/: .airflowignore  asset_triggered_dags.py  asset_triggered_dags.yml  custom_example_dag.py  custom_example_dag.yml  defaults.yml  example.dag.yaml  example_callbacks.py  example_callbacks.yml  example_callbacks__traditional.py  example_custom_py_object_dag.py  example_custom_yaml_type.py  example_custom_yaml_type.yml  example_customize_operator.py  example_customize_operator.yml  example_dag_factory.json  example_dag_factory.py  example_dag_factory.yml  example_dag_factory_default_args.yml  example_dag_factory_default_config.py  example_dag_factory_default_config.yml  example_dag_factory_default_config_dict.py  example_dag_factory_default_config_dict.yml  example_dag_factory_json.py  example_dag_factory_multiple.py  example_dag_factory_multiple_config.yml  example_dag_factory_tasks_as_list.yml  example_dag_factory_tasks_taskgroups_as_dict_format.yml  example_dynamic_task_mapping.py  example_dynamic_task_mapping.yml  example_dynamic_task_mapping_with_taskflow.py  example_dynamic_task_mapping_with_taskflow.yml  example_extends_chained.py  example_http_operator_task.py  example_http_operator_task.yml  example_jinja2_template_dag.py  example_jinja2_template_dag.yml  example_load_airflow2_dags.py  example_load_airflow3_dags.py  example_load_yaml_dags.py  (+27 more)
dev/js/: version-select.js
dev/migration_guide/: index.html
dev/search/: search_index.json
docs/: index.md  migration_guide.md  quick-start-airflow-standalone.md  quick-start-astro-cli.md  quick-start.md
docs/comparison/: index.md  taskflow_api.md  traditional_operators.md
docs/configuration/: configuring_workflows.md  custom_py_object.md  defaults.md  environment_variables.md  jinja2_template.md  load_yaml_dags.md  params.md  schedule.md
docs/contributing/: code_of_conduct.md  contributors.md  howto.md  roles.md  security.md
docs/features/: asset.md  callbacks.md  cli.md  configuring_workflows.md  custom_operators.md  custom_python_object.md  datasets.md  defaults.md  dynamic_tasks.md  http_task.md  kpo.md  multiple_configuration_files.md  object_storage.md  static_dag_generation.md  taskflow_pipeline.md
docs/getting-started/: quick-start-airflow-standalone.md  quick-start-astro-cli.md
examples/: customized  dags  datasets  example_customize_operator.py  example_customize_operator.yml  example_dag_factory.py  example_dag_factory.yml  example_dynamic_task_mapping.py  example_dynamic_task_mapping.yml  expand_tasks.py  invalid.yaml  print_hello.py
examples/datasets/: example_config_datasets.yml  example_dag_datasets.py  example_dag_datasets.yml
plugins/dags/: peloton_dep_dag.py
plugins/sensors/: external_task.py
plugins/utils/: __init__.py  slack_callbacks.py  task_deps.py
scripts/: docs_deploy.py  entrypoint.sh  verify_tag_and_version.py
scripts/airflow3/: .gitignore  README.md  env.sh  install_from_main.sh  requirements.txt  setup.sh  tests.sh
scripts/test/: integration-setup.sh  integration.sh  pre-install-airflow.sh  unit-cov.sh  unit.sh
tests/: test__main__.py  test_dagbuilder.py  test_dagbuilder_httpoperator.py  test_dagfactory.py  test_example_dags.py  test_generate_dag_code.py  test_parsers.py  test_settings.py  test_tasks_and_task_groups_list.py  test_telemetry.py  test_utils.py  test_validator.py  utils.py
tests/fixtures/: dag_factory.yml  dag_factory_extends.yml  dag_factory_extends_chained.yml  dag_factory_http_operator_task.yml  dag_factory_kubernetes_pod_operator.yml  dag_factory_kubernetes_pod_operator_lt_2_7.yml  dag_factory_no_or_none_string_schedule.yml  dag_factory_schedule_interval.yml  dag_factory_simple_http_operator_task.yml  dag_factory_task_group.yml  dag_factory_variables_as_arguments.yml  dag_md_docs.yml  defaults.yml  doc_md_builder.py  extends_base.yml  invalid_dag_factory.yml  invalid_yaml.yml  mydocfile.md
tests/fixtures_without_default/: dag_factory.yml
(+259 files in other folders)
